--- a/MyShop.Web/Areas/Admin/Views/Category/Create.cshtml
+++ b/MyShop.Web/Areas/Admin/Views/Category/Create.cshtml
@@ -30,8 +30,14 @@
     <a asp-action="Index">Back to List</a>
 </div>
 
+@section Scripts {
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
 
-@section Scripts{
-
-    <partial name="_ValidationScriptsPartial" />
+    <script>
+        tinymce.init({
+        selector: '#mytextarea'
+        });
+    </script>
 }
