--- a/MyShop.Web/Areas/Admin/Views/Category/Index.cshtml
+++ b/MyShop.Web/Areas/Admin/Views/Category/Index.cshtml
@@ -1,12 +1,14 @@
 ﻿@model IEnumerable<Category>
+
 @{
     ViewBag.PageTitle = "Category Management";
     ViewBag.CardTitle = "View Categories";
-}
 
+}
 <div>
-    <a class="btn btn-primary" href="/Category/Create">Create</a>
+    <a class="btn btn-primary" href="/Admin/Category/Create">Create</a>
 </div>
+
 <br />
 <table class="table table-hover" width="100%">
     <thead class="text-bold">
