--- a/MyShop.Web/Areas/Admin/Views/Product/Create.cshtml
+++ b/MyShop.Web/Areas/Admin/Views/Product/Create.cshtml
@@ -3,6 +3,8 @@
 @{
     ViewBag.PageTitle = "Product Management";
     ViewBag.CardTitle = "Create Product";
+    Layout = "~/Views/Shared/_Dashboard.cshtml";
+
 }
 
 <div class="row">
@@ -21,39 +23,55 @@
             </div>
             <div class="form-group">
                 <label asp-for="Product.Price" class="control-label"></label>
-                <input  asp-for="Product.Price" class="form-control"/>
+                <input asp-for="Product.Price" class="form-control" />
                 <span asp-validation-for="Product.Price" class="text-danger"></span>
             </div>
-
             <div class="form-group">
                 <label asp-for="Product.Img" class="control-label"></label>
-                <input type="file" class="form-control" id="ImgFile" name="File" />
+                <input type="file" name="file" id="imgfile" class="form-control" onchange="fillimg(event);" />
             </div>
-            
-                <div class="form-group">
-                    <label asp-for="Product.CategoryId" class="control-label"></label>
-                <select asp-for="Product.CategoryId" asp-items="Model.CategoryList" class="form-control">
-                        <option disabled selected>--Select Category--</option>
-                    </select>
-                </div>
-            
-            
-            
-
-
+            <div class="form-group">
+                <label asp-for="Product.CategoryId" class="control-label"></label>
+                <select asp-for="Product.CategoryId" class="form-control" asp-items="Model.CategoryList">
+                    <option disabled selected>-- Select Category --</option>
+                </select>
+            </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
     </div>
+
+    <div class="col-md-4">
+        <div class="container">
+            <img id="ImagePrevew" width="300" height="300" />
+        </div>
+    </div>
+
+
+
 </div>
 
 <div>
     <a asp-action="Index">Back to List</a>
 </div>
 
-
 @section Scripts {
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
 
-    <partial name="_ValidationScriptsPartial" />
+    <script>
+        var fillimg = function(event){
+            var imgholder = document.getElementById("ImagePrevew");
+            imgholder.src = URL.createObjectURL(event.target.files[0]);
+        }
+    </script>
+
+    <script>
+        tinymce.init({
+            selector: '#mytextarea'
+        });
+    </script>
+
 }
