--- a/MyShop.Web/Areas/Admin/Views/Product/Edit.cshtml
+++ b/MyShop.Web/Areas/Admin/Views/Product/Edit.cshtml
@@ -3,14 +3,15 @@
 @{
     ViewBag.PageTitle = "Product Management";
     ViewBag.CardTitle = "Edit Product";
+    Layout = "~/Views/Shared/_Dashboard.cshtml";
+
 }
 
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Edit" method="post" enctype="multipart/form-data">
-            <input hidden asp-for="Product.Id" />
-            <input hidden asp-for="Product.Img" />
-
+            <input type="hidden" asp-for="Product.Id" />
+            <input type="hidden" asp-for="Product.Img" />
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Product.Name" class="control-label"></label>
@@ -24,26 +25,19 @@
             </div>
             <div class="form-group">
                 <label asp-for="Product.Price" class="control-label"></label>
-                <input  asp-for="Product.Price" class="form-control"/>
+                <input asp-for="Product.Price" class="form-control" />
                 <span asp-validation-for="Product.Price" class="text-danger"></span>
             </div>
-
             <div class="form-group">
                 <label asp-for="Product.Img" class="control-label"></label>
-                <input type="file" class="form-control" id="ImgFile" name="File" />
+                <input type="file" name="file" id="imgfile" class="form-control" />
             </div>
-
-                <div class="form-group">
-                    <label asp-for="Product.CategoryId" class="control-label"></label>
-                <select asp-for="Product.CategoryId" asp-items="Model.CategoryList" class="form-control">
-                        <option disabled selected>--Select Category--</option>
-                    </select>
-                </div>
-
-
-
-
-
+            <div class="form-group">
+                <label asp-for="Product.CategoryId" class="control-label"></label>
+                <select asp-for="Product.CategoryId" class="form-control" asp-items="Model.CategoryList">
+                    <option disabled selected>-- Select Category --</option>
+                </select>
+            </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-success" />
             </div>
@@ -60,8 +54,14 @@
     <a asp-action="Index">Back to List</a>
 </div>
 
-
 @section Scripts {
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
 
-        <partial name="_ValidationScriptsPartial" />
+    <script>
+        tinymce.init({
+            selector: '#mytextarea'
+        });
+    </script>
 }
