--- a/MyShop.Web/Views/Shared/_Customer.cshtml
+++ b/MyShop.Web/Views/Shared/_Customer.cshtml
@@ -1,4 +1,7 @@
-﻿
+﻿@using Microsoft.AspNetCore.Http
+@using MyShop.Utilities
+@inject IHttpContextAccessor httpContextAccessor
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,11 +10,8 @@
     <meta name="description" content="" />
     <meta name="author" content="" />
     <title>myshop</title>
-    <!-- Favicon-->
     <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
-    <!-- Bootstrap icons-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
-    <!-- Core theme CSS (includes Bootstrap)-->
     <link href="~/customer/css/styles.css" rel="stylesheet" />
 </head>
 <body>
@@ -23,7 +23,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
                     <li class="nav-item"><a class="nav-link active" aria-current="page" href="/Customer/Home/Index">Home</a></li>
-                   @*  @if (User.Identity.IsAuthenticated)
+                    @if (User.Identity.IsAuthenticated)
                     {
                         @if (User.IsInRole(SD.AdminRole))
                         {
@@ -41,7 +41,7 @@
                             </li>
                         }
 
-                    } *@
+                    }
                 </ul>
                 <partial name="_LoginPartial" />
                 @if (User.Identity.IsAuthenticated)
@@ -50,18 +50,7 @@
                         <a href="/Customer/Cart/Index" class="btn btn-outline-dark">
                             <i class="bi-cart-fill me-1"></i>
                             Cart
-                           @*  @await Component.InvokeAsync("ShoppingCart") *@
-                            @* @if (httpContextAccessor.HttpContext.Session.GetInt32(SD.SessionKey) != null)
-                        {
-                        <span class="badge bg-dark text-white ms-1 rounded-pill">
-                        @httpContextAccessor.HttpContext.Session.GetInt32(SD.SessionKey)
-                        </span>
-                        }
-                        else
-                        {
-                        <span class="badge bg-dark text-white ms-1 rounded-pill">0</span>
-                        } *@
-
+                            @await Component.InvokeAsync("ShoppingCart")                           
                         </a>
                     </form>
                 }
